# chrome-automation

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: publish.yml  tests.yml
examples/: quickstart.py  research_demo.py
